@@ -43,7 +43,8 @@ tractags-0.7 (not yet released)
  * #9210: /tags page should not have a contextual navigation link 'Cloud'
  * #9521: New install impossible on Trac 0.13dev
    by adding generic db schema upgrade support
- * #11096: Avoid an `OperationalError: too many SQL variables`
+ * #11096: Avoid an `OperationalError: too many SQL variables
+ * #11152: Tags are not supported on the 'wiki' realm
  * TagsQuery now supports a context object
  * refactor cloud rendering so it can be used by other plugins
  * fix regression related to missing IWikiChangeListener
